# OREvaultMiner

./: .gitignore  README.md  techspec
backend/: .env.example  .gitignore  Cargo.toml
backend/src/: ai.rs  balances.rs  claims.rs  db.rs  jito.rs  main.rs  ore.rs  strategy.rs  wallet.rs  ws.rs
deploy/: deploy.sh  orevault.service
frontend/: .env.example  .gitignore  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/components/: AiDecisions.tsx  BalanceDisplay.tsx  BetConfig.tsx  ClaimModal.tsx  ClaimPanel.tsx  Grid.tsx  LiveBets.tsx  MiningWallet.tsx  Stats.tsx  WalletConnect.tsx  WinLossTracker.tsx  index.ts
frontend/lib/: api.ts  store.ts
migrations/: 001_initial_schema.sql  002_wallets.sql
