[package]
name = "orevault-backend"
version = "1.0.0"
edition = "2021"
authors = ["OreVault Team"]
description = "Automated ORE v3 mining engine with Jito bundle submission"

[dependencies]
# ORE v3 Program API
ore-api = "3.6"

# Solana SDK
solana-sdk = "2.1"
solana-client = "2.1"
solana-transaction-status = "2.1"
solana-account-decoder = "2.1"
spl-token = "6"
spl-associated-token-account = "4"

# HTTP client for Jito bundle submission
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Async runtime
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
tokio-stream = "0.1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }

# Web server and WebSocket
axum = { version = "0.7", features = ["ws", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
rust_decimal = { version = "1", features = ["serde"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dotenvy = "0.15"
base64 = "0.22"
bs58 = "0.5"
bincode = "1"
futures = "0.3"
futures-util = "0.3"
dashmap = "5"
parking_lot = "0.12"
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "orevault"
path = "src/main.rs"
